# speedup-roundingSat

./: .gitignore  README.md  SUMMARY-DATA-Journal.ods  SUMMARY-DATA.ods
Journal-Version-Roundingsat-2020/: README.md
Journal-Version-Roundingsat-2020/final-improved-system-no-logs/: Makefile
Journal-Version-Roundingsat-2020/final-improved-system-no-logs/src/: Options.hpp  Solver.cpp  Solver.hpp  SolverStructs.cpp  SolverStructs.hpp  Stats.hpp  parsing.hpp  quit.cpp  run.hpp
Journal-Version-Roundingsat-2020/improved-system-read-logs/: Makefile
Journal-Version-Roundingsat-2020/improved-system-read-logs/src/: ExecInfo.hpp  Logger.hpp  Options.hpp  SimpleCons.hpp  Solver.cpp  Solver.hpp  SolverStructs.cpp  SolverStructs.hpp  Stats.hpp  aux.hpp  file.cpp  file.hpp  parsing.hpp  quit.cpp  roundingsat.cpp  run.hpp
Journal-Version-Roundingsat-2020/orignal-system-write-read-logs/: CMakeLists.txt  Makefile
Journal-Version-Roundingsat-2020/orignal-system-write-read-logs/src/: Options.hpp  SimpleCons.hpp  Solver.cpp  Solver.hpp  SolverStructs.cpp  SolverStructs.hpp  Stats.hpp  aux.cpp  file.cpp  file.hpp  parsing.hpp  quit.cpp  quit.hpp  roundingsat.cpp  run.hpp  typedefs.hpp
Journal-Version-Roundingsat-2025/: README.md
Journal-Version-Roundingsat-2025/final-improved-system-no-logs/: CMakeLists.txt
Journal-Version-Roundingsat-2025/final-improved-system-no-logs/src/: Constr.cpp  ConstrExp.cpp  Options.hpp  Solver.cpp  Solver.hpp  Stats.cpp  optimize.cpp  roundingsat.cpp  run.cpp
Journal-Version-Roundingsat-2025/improved-system-read-logs/: README.md
Journal-Version-Roundingsat-2025/original-system-write-read-logs/: CMakeLists.txt
improved-roundingSat-final-version/: README.md
improved-roundingSat-final-version/src/: Constraint.hpp  IntSet.hpp  Options.hpp  Solver.cpp  Solver.hpp  aux.hpp  quit.cpp  run.hpp
improved-roundingSat-reading-logs/: CMakeLists.txt  README.md
improved-roundingSat-reading-logs/src/: Constraint.hpp  ExecInfo.hpp  Options.hpp  SimpleCons.hpp  Solver.cpp  Solver.hpp  Stats.hpp  quit.hpp
logs/: 3-normalized-fx60.opt.log.tar.xz  note.txt
old-systems-for-SAT2024-paper/improved-roundingSat-final-version/: CMakeLists.txt
old-systems-for-SAT2024-paper/improved-roundingSat-final-version/src/: SolverStructs.cpp  SolverStructs.hpp  Stats.hpp  parsing.hpp  quit.hpp  roundingsat.cpp
old-systems-for-SAT2024-paper/logs/: 1-normalized-fx92.opt.log.tar.xz  note.txt
(+44 files in other folders)
